css bug with cutting off registreation panel  - when a user searches for a company, the returned details are cutt off  and the botom. Amend css property height to min-height and change value to 50rem for the animate-switch-container

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -122,7 +122,7 @@
 .animate-switch-container {
   position:relative;
   overflow: hidden;
-  height: 60rem;
+  min-height: 50rem;
   width: 45rem;
   // padding:10px;
   // border-radius:10px;
